# point_one_robot_car

./: .gitignore  .gitmodules  Makefile  README.md  devellopment.tmp  install_dependecies.sh  renovate.json  to_remove.txt
.github/workflows/: ci_cd_point_one.yml  runner.yml  trainer.yml
d4/: config.py  manage.py  mblancho@192.168.6.142  my_joystick.py  myconfig.py  myconfig.py.save  requirements.txt
doc/: camera_info.txt  circuit_diagram.circ  full_component_list.txt  logicim_program.txt
runner_program/: Makefile  main.cpp
runner_program/LD_LIDAR_python/: CalcLidarData.py  main.py
runner_program/LD_LIDAR_python/ld_lidar/: pyvenv.cfg
runner_program/include/: curve_fitting.hpp  src.hpp
runner_program/inference/: .clang-format  .gitignore  CMakeLists.txt
runner_program/inference/dependencies/XLink-luxonis-2020.2/: CMakeLists.txt
runner_program/inference/doc/: README.md
runner_program/inference/src/: main.cpp  setup_camera.cpp
runner_program/inference/tests/: unit_tests.cpp
runner_program/libs/: Makefile
runner_program/libs/curve_fitting/: Makefile  main.cpp  requirement.txt  (+2 more)
runner_program/lidar/: Const.py  GraphicDisplay.py  Lidar.py  LidarLocation.py  LoadConfig.py  README.md
runner_program/pyvesc/: test_uart.py
runner_program2/: Makefile  requirements.txt
runner_program2/src/: main.py  motor_controller_api.py  spline.py
runner_program2/tests/: aide_courbure.py  test_constants.py  test_main.py
runnner_program/: Makefile
trainer_program/: Makefile  requirements.txt
trainer_program/src/: __init__.py  constants.py  get_data.py  main.py  output_processed_data.py  test.py
trainer_program/tests/: test_main.py
(+7 files in other folders)
